--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Tes 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Belajar menggunakan VSCode</title>
+</head>
+<body>
+<h1>Selamat Datang</h1>
+</body>
+</html>
